--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@prisma/client": "^6.16.2",
     "dotenv": "^17.2.2",
     "fastify": "^5.6.1",
+    "fastify-type-provider-zod": "^6.0.0",
     "zod": "^4.1.11"
   },
   "prisma": {
