--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
+    "@fastify/cors": "^11.1.0",
     "@prisma/client": "^6.16.2",
     "dotenv": "^17.2.2",
     "fastify": "^5.6.1",
