--- a/package.json
+++ b/package.json
@@ -8,20 +8,27 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
+    "test": "jest",
     "build": "tsc",
     "start": "node dist/server.js",
     "lint": "eslint src --ext .ts --fix",
     "format": "prettier --write src/**/*.ts"
   },
   "devDependencies": {
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.5.2",
+    "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.44.1",
     "@typescript-eslint/parser": "^8.44.1",
     "eslint": "^9.36.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
+    "jest": "^30.2.0",
+    "jest-mock-extended": "^4.0.0",
     "prettier": "^3.6.2",
     "prisma": "^6.16.2",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.4",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2"
   },
